sfdx/force-app/main/default/objects/OpportunityContactRole/fields/LDGCRM_Date_Added__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Date_Added__c</fullName>
    <description>Date contact was added to Salesforce</description>
    <inlineHelpText>Date contact was added to Salesforce</inlineHelpText>
    <label>Date Added</label>
    <type>Date</type>
</CustomField>