sfdx/force-app/main/default/objects/OpportunityContactRole/fields/LDGCRM_Date_Archived__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Date_Archived__c</fullName>
    <description>Date contact was archived -- contact is no longer active in this role</description>
    <inlineHelpText>Date contact was archived -- contact is no longer active in this role</inlineHelpText>
    <label>Date Archived</label>
    <type>Date</type>
</CustomField>