sfdx/force-app/main/default/objects/OpportunityContactRole/fields/LDGCRM_External_ID__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_External_ID__c</fullName>
    <description>External Airtable ID</description>
    <label>External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>